# TrezoaAnchor

./: .cspell-trezoaanchor-dictionary.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bump-version.sh  cspell.config.yaml  setup-tests.sh
.github/: issue_template.md
.github/workflows/: no-caching-tests.yaml  release.yaml  reusable-tests.yaml  tests.yaml
avm/src/: lib.rs  main.rs
bench/: BINARY_SIZE.md  COMPUTE_UNITS.md  STACK_MEMORY.md
cli/: Cargo.toml
cli/npm-package/: package.json  trezoaanchor.js
cli/src/: account.rs  checks.rs  config.rs  keygen.rs  lib.rs  program.rs  rust_template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: blocking.rs  main.rs  nonblocking.rs
client/src/: blocking.rs  cluster.rs  lib.rs  nonblocking.rs
docs/: README.md  pnpm-lock.yaml  redirects.json
docs/app/: layout.config.tsx
examples/tutorial/: package.json
idl/: Cargo.toml
idl/spec/: Cargo.toml
idl/src/: build.rs  convert.rs  lib.rs
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/access-control/src/: lib.rs
lang/attribute/account/: Cargo.toml
lang/attribute/account/src/: id.rs  lazy.rs  lib.rs
lang/attribute/constant/: Cargo.toml
lang/attribute/constant/src/: lib.rs
lang/attribute/error/: Cargo.toml
lang/attribute/error/src/: lib.rs
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/attribute/program/src/: lib.rs
lang/attribute/program/src/declare_program/: common.rs  mod.rs
lang/attribute/program/src/declare_program/mods/: accounts.rs  client.rs  constants.rs  cpi.rs  errors.rs  events.rs  internal.rs  program.rs  types.rs  utils.rs
lang/derive/accounts/: Cargo.toml
lang/derive/accounts/src/: lib.rs
lang/derive/serde/: Cargo.toml
lang/derive/serde/src/: lazy.rs  lib.rs
lang/derive/space/: Cargo.toml
lang/derive/space/src/: lib.rs
lang/src/: account_meta.rs  bpf_upgradeable_state.rs  bpf_writer.rs  common.rs  context.rs  error.rs  event.rs  idl.rs  lazy.rs  lib.rs  system_program.rs  vec.rs
lang/src/accounts/: account.rs  account_info.rs  account_loader.rs  boxed.rs  interface.rs  interface_account.rs  lazy_account.rs  option.rs  program.rs  signer.rs  system_account.rs  sysvar.rs  unchecked_account.rs
lang/src/signature_verification/: ed25519.rs  mod.rs  secp256k1.rs
lang/syn/: Cargo.toml
lang/syn/src/: hash.rs  lib.rs
lang/syn/src/codegen/: error.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  bumps.rs  constraints.rs  exit.rs  to_account_infos.rs  to_account_metas.rs  try_accounts.rs
lang/syn/src/codegen/program/: accounts.rs  cpi.rs  dispatch.rs  entry.rs  handlers.rs  idl.rs  instruction.rs
lang/syn/src/idl/: accounts.rs  address.rs  common.rs  constant.rs  defined.rs  error.rs  event.rs  external.rs  program.rs
lang/syn/src/parser/: context.rs
lang/syn/src/parser/accounts/: constraints.rs  mod.rs
lang/syn/src/parser/program/: instructions.rs
lang/tests/: account_reload.rs  generics_test.rs  macros.rs  seeds_compile.rs  serialization.rs  space.rs
tests/: package.json
tests/auction-house/: TrezoaAnchor.toml  package.json
tests/auction-house/programs/auction-house/: Cargo.toml
tests/auction-house/programs/auction-house/src/: lib.rs  utils.rs
tests/bench/: README.md  TrezoaAnchor.toml  bench.json  package.json
tests/bench/programs/bench/: Cargo.toml
tests/bench/programs/bench/src/: lib.rs
tests/bpf-upgradeable-state/: TrezoaAnchor.toml  package.json
tests/bpf-upgradeable-state/programs/bpf-upgradeable-state/: Cargo.toml
tests/bpf-upgradeable-state/programs/bpf-upgradeable-state/src/: lib.rs
tests/cashiers-check/: TrezoaAnchor.toml  package.json
tests/cashiers-check/programs/cashiers-check/: Cargo.toml
tests/cashiers-check/programs/cashiers-check/src/: lib.rs
tests/cfo/: TrezoaAnchor.toml  package.json
tests/chat/: TrezoaAnchor.toml  package.json
tests/chat/programs/chat/: Cargo.toml
tests/chat/programs/chat/src/: lib.rs
tests/composite/: TrezoaAnchor.toml  (+1 more)
tests/composite/programs/composite/: Cargo.toml
tests/composite/programs/composite/src/: lib.rs
tests/cpi-returns/programs/callee/: Cargo.toml
tests/cpi-returns/programs/callee/src/: lib.rs
tests/custom-discriminator/programs/ambiguous-discriminator/: Cargo.toml
tests/custom-discriminator/programs/ambiguous-discriminator/src/: lib.rs
tests/custom-program/programs/custom-program/: Cargo.toml
tests/custom-program/programs/custom-program/src/: lib.rs
tests/declare-id/programs/declare-id/: Cargo.toml
tests/declare-id/programs/declare-id/src/: lib.rs
tests/declare-program/programs/declare-program/: Cargo.toml
tests/declare-program/programs/declare-program/src/: lib.rs
tests/declare-program/programs/declare-program/tests/: client.rs
tests/duplicate-mutable-accounts/programs/duplicate-mutable-accounts/: Cargo.toml
tests/duplicate-mutable-accounts/programs/duplicate-mutable-accounts/src/: lib.rs
tests/idl/programs/generics/: Cargo.toml
tests/idl/programs/generics/src/: lib.rs
tests/idl/programs/idl/: Cargo.toml
tests/idl/programs/idl/src/: lib.rs
tests/idl/programs/new-idl/: Cargo.toml
tests/idl/programs/new-idl/src/: lib.rs
tests/idl/programs/relations-derivation/: Cargo.toml
tests/idl/programs/relations-derivation/src/: lib.rs
tests/lazy-account/programs/lazy-account/: Cargo.toml
tests/lazy-account/programs/lazy-account/src/: lib.rs
tpl/: Cargo.toml
tpl/src/: associated_token.rs  governance.rs  idl_build.rs  lib.rs  memo.rs  metadata.rs  mint.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
tpl/src/token_2022_extensions/: cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  non_transferable.rs  permanent_delegate.rs  token_group.rs  token_metadata.rs  transfer_fee.rs  transfer_hook.rs
ts/: build-packages.sh  package.json
(+399 files in other folders)
