[workspace]
members = [
    "avm",
    "cli",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
    "tpl",
]
exclude = ["tests/cfo/deps/openbook-dex", "tests/swap/deps/openbook-dex"]
resolver = "2"

[workspace.dependencies]
trezoa-account = "3.2.0"
trezoa-account-decoder = "3.2.0"
trezoa-account-info = "3.2.0"
trezoa-cli-config = "3.2.0"
trezoa-clock = "3.2.0"
trezoa-commitment-config = "3.2.0"
trezoa-compute-budget-interface = "3.2.0"
trezoa-cpi = "3.2.0"
trezoa-define-syscall = "3.2.0"
trezoa-faucet = "3.2.0"
trezoa-feature-gate-interface = "3.2.0"
trezoa-instruction = "3.2.0"
trezoa-instructions-sysvar = "3.2.0"
trezoa-invoke = "0.5.0"
trezoa-keypair = "3.2.0"
trezoa-loader-v3-interface = "6.0.0"
trezoa-message = "3.2.0"
trezoa-msg = "3.2.0"
trezoa-packet = "3.2.0"
trezoa-program = "3.2.0"
trezoa-program-entrypoint = "3.2.0"
trezoa-program-error = "3.2.0"
trezoa-program-memory = "3.2.0"
trezoa-program-option = "3.2.0"
trezoa-program-pack = "3.2.0"
trezoa-pubkey = "4.0.0"
trezoa-pubsub-client = "3.2.0"
trezoa-rpc-client = "3.2.0"
trezoa-rpc-client-api = "3.2.0"
trezoa-sdk-ids = "3.2.0"
trezoa-signature = "3.2.0"
trezoa-signer = "3.2.0"
trezoa-stake-interface = "2.0.0"
trezoa-system-interface = "2.0.0"
# FIXME: trezoa-sysvar 3.1.x contains breaking changes to sysvar retrieval
trezoa-sysvar = "~3.2.0"
trezoa-sysvar-id = "3.2.0"
trezoa-transaction = "3.2.0"

[profile.release]
lto = true

[profile.release.package.trezoaanchor-cli]
codegen-units = 1
