[package]
name = "trezoaanchor-cli"
version = "0.32.1"
authors = ["TrezoaAnchor Maintainers <accounts@200ms.io>"]
edition = "2021"
repository = "https://github.com/trezoa-xyz/trezoaanchor"
description = "TrezoaAnchor CLI"
license = "Apache-2.0"

[[bin]]
name = "trezoaanchor"
path = "src/bin/main.rs"

[features]
dev = []

[dependencies]
trezoaanchor-client = { path = "../client", version = "0.32.1" }
trezoaanchor-lang = { path = "../lang", version = "0.32.1" }
trezoaanchor-lang-idl = { path = "../idl", version = "0.1.2", features = ["build", "convert"] }
anyhow = "1.0.32"
base64 = "0.21"
bincode = "1.3.3"
cargo_toml = "0.19.2"
chrono = "0.4.19"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
console = "0.15"
dirs = "4.0"
ed25519-dalek = "2"
flate2 = "1.0.19"
heck = "0.4.0"
pathdiff = "0.2.0"
portpicker = "0.1.1"
regex = "1.8.3"
reqwest = { version = "0.11.4", default-features = false, features = ["multipart", "blocking", "rustls-tls"] }
semver = "1.0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1.0"
trezoa-cli-config.workspace = true
trezoa-client = "3.0.0"
trezoa-clock.workspace = true
trezoa-commitment-config.workspace = true
trezoa-compute-budget-interface.workspace = true
trezoa-faucet = { workspace = true, features = ["agave-unstable-api"] }
trezoa-instruction.workspace = true
trezoa-keypair.workspace = true
trezoa-loader-v3-interface.workspace = true
trezoa-message.workspace = true
trezoa-packet.workspace = true
trezoa-pubkey.workspace = true
trezoa-sdk-ids.workspace = true
trezoa-signature.workspace = true
trezoa-signer.workspace = true
trezoa-system-interface.workspace = true
trezoa-transaction.workspace = true
trezoa-rpc-client.workspace = true
trezoa-rpc-client-api.workspace = true
trezoa-pubsub-client.workspace = true
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
tar = "0.4.35"
tempfile = "3"
tiny-bip39 = "2.0"
toml = "0.7.6"
walkdir = "2.3.2"
