[package]
name = "trezoaanchor-lang"
version = "0.32.1"
authors = ["TrezoaAnchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/trezoa-xyz/trezoaanchor"
edition = "2021"
license = "Apache-2.0"
description = "Trezoa Sealevel eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["trezoaanchor-derive-accounts/allow-missing-optionals"]
trezoaanchor-debug = [
    "trezoaanchor-attribute-access-control/trezoaanchor-debug",
    "trezoaanchor-attribute-account/trezoaanchor-debug",
    "trezoaanchor-attribute-constant/trezoaanchor-debug",
    "trezoaanchor-attribute-error/trezoaanchor-debug",
    "trezoaanchor-attribute-event/trezoaanchor-debug",
    "trezoaanchor-attribute-program/trezoaanchor-debug",
    "trezoaanchor-derive-accounts/trezoaanchor-debug",
]
derive = []
event-cpi = [
    "trezoaanchor-attribute-event/event-cpi",
    "trezoaanchor-attribute-account/event-cpi",
]
idl-build = [
    "trezoaanchor-attribute-account/idl-build",
    "trezoaanchor-attribute-constant/idl-build",
    "trezoaanchor-attribute-event/idl-build",
    "trezoaanchor-attribute-error/idl-build",
    "trezoaanchor-attribute-program/idl-build",
    "trezoaanchor-derive-accounts/idl-build",
    "trezoaanchor-derive-serde/idl-build",
    "trezoaanchor-lang-idl/build",
]
init-if-needed = ["trezoaanchor-derive-accounts/init-if-needed"]
interface-instructions = ["trezoaanchor-attribute-program/interface-instructions"]
lazy-account = [
    "trezoaanchor-attribute-account/lazy-account",
    "trezoaanchor-derive-serde/lazy-account",
]

[dependencies]
trezoaanchor-attribute-access-control = { path = "./attribute/access-control", version = "0.32.1" }
trezoaanchor-attribute-account = { path = "./attribute/account", version = "0.32.1" }
trezoaanchor-attribute-constant = { path = "./attribute/constant", version = "0.32.1" }
trezoaanchor-attribute-error = { path = "./attribute/error", version = "0.32.1" }
trezoaanchor-attribute-event = { path = "./attribute/event", version = "0.32.1" }
trezoaanchor-attribute-program = { path = "./attribute/program", version = "0.32.1" }
trezoaanchor-derive-accounts = { path = "./derive/accounts", version = "0.32.1" }
trezoaanchor-derive-serde = { path = "./derive/serde", version = "0.32.1" }
trezoaanchor-derive-space = { path = "./derive/space", version = "0.32.1" }

# `trezoaanchor-lang-idl` should only be included with `idl-build` feature
trezoaanchor-lang-idl = { path = "../idl", version = "0.1.2", optional = true }

base64 = "0.21"
bincode = "1"
borsh = "1.5.7"
bytemuck = { version = "1", features = ["derive"] }
const-crypto = "0.3.0"

trezoa-account-info.workspace = true
trezoa-clock.workspace = true
trezoa-cpi.workspace = true
trezoa-define-syscall.workspace = true
trezoa-feature-gate-interface.workspace = true
trezoa-instruction.workspace = true
trezoa-instructions-sysvar.workspace = true
trezoa-invoke.workspace = true
trezoa-loader-v3-interface = { workspace = true, features = ["bincode"] }
trezoa-msg.workspace = true
trezoa-program-entrypoint.workspace = true
trezoa-program-error = { workspace = true, features = ["borsh"] }
trezoa-program-memory.workspace = true
trezoa-program-option.workspace = true
trezoa-program-pack.workspace = true
trezoa-pubkey = { workspace = true, features = ["borsh", "bytemuck", "serde"] }
trezoa-sdk-ids.workspace = true
trezoa-stake-interface = { workspace = true, features = ["sysvar", "bincode"] }
trezoa-system-interface.workspace = true
trezoa-sysvar = { workspace = true, features = ["bincode"] }
trezoa-sysvar-id.workspace = true

thiserror = "1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("trezoa"))']
