[package]
name = "trezoaanchor-lang-idl-spec"
version = "0.1.0"
authors = ["TrezoaAnchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/trezoa-xyz/trezoaanchor"
edition = "2021"
license = "Apache-2.0"
description = "TrezoaAnchor framework IDL spec"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
