[package]
name = "trezoaanchor-attribute-access-control"
version = "0.32.1"
authors = ["TrezoaAnchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/trezoa-xyz/trezoaanchor"
license = "Apache-2.0"
description = "TrezoaAnchor attribute macro for instruction access control"
edition = "2021"

[lib]
proc-macro = true

[features]
trezoaanchor-debug = ["trezoaanchor-syn/trezoaanchor-debug"]

[dependencies]
trezoaanchor-syn = { path = "../../syn", version = "0.32.1" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
