[package]
name = "trezoaanchor-attribute-account"
version = "0.32.1"
authors = ["TrezoaAnchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/trezoa-xyz/trezoaanchor"
license = "Apache-2.0"
description = "TrezoaAnchor attribute macro for defining an account"
edition = "2021"

[lib]
proc-macro = true

[features]
trezoaanchor-debug = ["trezoaanchor-syn/trezoaanchor-debug"]
idl-build = ["trezoaanchor-syn/idl-build"]
lazy-account = []
event-cpi = []

[dependencies]
trezoaanchor-syn = { path = "../../syn", version = "0.32.1", features = ["hash"] }
bs58 = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
