[package]
name = "trezoaanchor-attribute-program"
version = "0.32.1"
authors = ["TrezoaAnchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/trezoa-xyz/trezoaanchor"
license = "Apache-2.0"
description = "TrezoaAnchor attribute macro for defining a program"
edition = "2021"

[lib]
proc-macro = true

[features]
trezoaanchor-debug = ["trezoaanchor-syn/trezoaanchor-debug"]
idl-build = ["trezoaanchor-syn/idl-build"]
interface-instructions = ["trezoaanchor-syn/interface-instructions"]

[dependencies]
trezoaanchor-lang-idl = { path = "../../../idl", version = "0.1.2", features = ["convert"] }
trezoaanchor-syn = { path = "../../syn", version = "0.32.1" }
anyhow = "1"
bs58 = "0.5"
heck = "0.3"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full"] }
