[package]
name = "trezoaanchor-derive-serde"
version = "0.32.1"
authors = ["TrezoaAnchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/trezoa-xyz/trezoaanchor"
license = "Apache-2.0"
description = "TrezoaAnchor Derive macro for serialization and deserialization"
edition = "2021"

[lib]
proc-macro = true

[features]
idl-build = ["trezoaanchor-syn/idl-build"]
lazy-account = []

[dependencies]
trezoaanchor-syn = { path = "../../syn", version = "0.32.1" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
