[package]
name = "bench"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["trezoaanchor-lang/idl-build", "trezoaanchor-tpl/idl-build"]

[dependencies]
trezoaanchor-lang = { path = "../../../../lang" }
trezoaanchor-tpl = { path = "../../../../spl" }
