[package]
name = "cashiers-check"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cashiers_check"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trezoaanchor-lang/idl-build", "trezoaanchor-tpl/idl-build"]

[dependencies]
trezoaanchor-lang = { path = "../../../../lang" }
trezoaanchor-tpl = { path = "../../../../spl" }
