[package]
name = "callee"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "callee"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trezoaanchor-lang/idl-build"]

[dependencies]
trezoaanchor-lang = { path = "../../../../lang", features = ["init-if-needed"] }
