[package]
name = "custom-program"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_program"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["trezoaanchor-lang/idl-build"]

[dependencies]
trezoaanchor-lang = { path = "../../../../lang" }
