[package]
name = "generics"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "generics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["trezoaanchor-lang/idl-build", "external/idl-build"]
default = []

[dependencies]
trezoaanchor-lang = { path = "../../../../lang" }
external = { path = "../external", features = ["no-entrypoint"] }
