[package]
name = "idl"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["trezoaanchor-lang/idl-build", "trezoaanchor-tpl/idl-build", "external/idl-build"]
default = []

[dependencies]
trezoaanchor-lang = { path = "../../../../lang" }
trezoaanchor-tpl = { path = "../../../../spl" }
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"] }
external = { path = "../external", features = ["no-entrypoint"] }
