[package]
name = "new-idl"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "new_idl"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["trezoaanchor-lang/idl-build"]

[dependencies]
trezoaanchor-lang = { path = "../../../../lang" }
external = { path = "../external", features = ["no-entrypoint"] }
