[package]
name = "relations-derivation"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relations_derivation"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["trezoaanchor-lang/idl-build"]
default = []

[dependencies]
trezoaanchor-lang = { path = "../../../../lang" }
