[package]
name = "lazy-account"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazy_account"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["trezoaanchor-lang/idl-build"]

[dependencies]
trezoaanchor-lang = { path = "../../../../lang", features = ["lazy-account"] }
